[gd_scene load_steps=2 format=2]

[ext_resource path="res://Items/Scripts/BarrelExit.gd" type="Script" id=1]

[node name="BarrelExit" type="Position2D"]
script = ExtResource( 1 )

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="MiscTimer" type="Timer" parent="."]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_Cooldown_timeout"]
